src/objects/Account.object
<CustomObject>
    <fields>
        <fullName>rC_Giving__Track_Soft_Credits__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Track and display Soft Credit information on Account.</description>
        <inlineHelpText>Should Track and display Soft Credit information on Account enabled ?</inlineHelpText>
        <label>Track Soft Credits?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Track_Summaries__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Populated by trigger, indicates if Summaries should be tracked.</description>
        <inlineHelpText>Should Summaries be tracked?</inlineHelpText>
        <label>Track Summaries?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Update_Gift_Membership_Summaries__c</fullName>
        <description>Automatically populated, Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</description>
        <inlineHelpText>Most recentpdate Gift Membership Summaries date and time.</inlineHelpText>
        <label>Update Gift Membership Summaries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Update_Lifetime_Summaries__c</fullName>
        <description>Automatically populated, Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</description>
        <inlineHelpText>Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</inlineHelpText>
        <label>Update Lifetime Summaries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Giving__Update_Summaries__c</fullName>
        <defaultValue>NOW()</defaultValue>
        <description>Automatically populated, Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</description>
        <inlineHelpText>Internal field: Shows the last time that child summaries were recalculated from giving records. Reset to blank/null to force a recalculation.</inlineHelpText>
        <label>Update Summaries</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>rC_Volunteers__Active__c</fullName>
        <label>Active</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SUID__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>Alternate_Names__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Corporations</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>SUID__c</columns>
        <columns>Status__c</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>ACCOUNT.ADDRESS1_CITY</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.ADDRESS1_ZIP</columns>
        <columns>ACCOUNT.ADDRESS1_COUNTRY</columns>
        <columns>Alternate_Names__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ACCOUNT.TYPE</field>
            <operation>equals</operation>
            <value>Corporation,Personal Corporation</value>
        </filters>
        <label>Corporations</label>
        <language>en_US</language>
    </listViews>
    <recordTypes>
        <fullName>rC_Bios__Household</fullName>
        <active>true</active>
        <description>A person or group of people residing at the same address and who are considered a constituent unit.</description>
        <label>Household</label>
    </recordTypes>
    <recordTypes>
        <fullName>rC_Bios__Organizational</fullName>
        <active>true</active>
        <description>Corporations, foundations, government agencies, schools, businesses, etc.</description>
        <label>Organization</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Account_Name_Enforcement</fullName>
        <active>false</active>
        <description>S-361357 - Don&apos;t allow Account Name to be different than the standard</description>
        <errorConditionFormula>AND(
ISCHANGED(Name),
RecordType.Name = &apos;Household&apos;,
$Setup.rC_Bios__Account_Setting__c.rC_Bios__Disable_Account_Name_Generation__c=false,
Name!=Shadow_Account_Name__c,
!ISCHANGED(Shadow_Account_Name__c))</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Account Name has been standardized and can not be manually changed for Households</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Constituent_Type_Required_Organisation</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
    CONTAINS( RecordType.Name, &apos;Organization&apos; ),
     ISBLANK( TEXT( Type ) )
    )</errorConditionFormula>
        <errorDisplayField>Type</errorDisplayField>
        <errorMessage>Constituent Type is Required</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Hierarchy_Type_Mandatory_if_has_Parent</fullName>
        <active>true</active>
        <description>S-342637 - Enforce user to select a Hierarchy Type of a Parent Account is selected.</description>
        <errorConditionFormula>AND(!ISBLANK(ParentId),ISPICKVAL(Hierarchy_Type__c,&apos;&apos;))</errorConditionFormula>
        <errorDisplayField>Hierarchy_Type__c</errorDisplayField>
        <errorMessage>Please enter the relationship that this Account has to the Parent Account</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Giving__Match_Ratio_Required</fullName>
        <active>true</active>
        <description>&quot;Match Ratio&quot; must be populated when either &quot;Maximum Matched&quot; or &quot;Minimum Matched&quot; is populated.</description>
        <errorConditionFormula>AND($Setup.rC_Giving__Account_Validation__c.rC_Giving__Match_Ratio_Required__c, OR(NOT(ISBLANK(rC_Giving__Maximum_Matched__c)), NOT(ISBLANK(rC_Giving__Minimum_Matched__c))), ISBLANK(rC_Giving__Match_Ratio__c))</errorConditionFormula>
        <errorDisplayField>rC_Giving__Match_Ratio__c</errorDisplayField>
        <errorMessage>Required field: Match Ratio</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Giving__Maximum_Matched_Greater_Minimum_Matched</fullName>
        <active>true</active>
        <description>&quot;Maximum Matched&quot; must be greater than the &quot;Minimum Matched&quot; when &quot;Minimum Matched&quot; and &quot;Maximum Matched&quot; are both populated.</description>
        <errorConditionFormula>AND($Setup.rC_Giving__Account_Validation__c.rC_Giving__Maximum_Matched_Greater_Minimum_Matched__c, NOT(ISBLANK(rC_Giving__Minimum_Matched__c)), NOT(ISBLANK(rC_Giving__Maximum_Matched__c)), rC_Giving__Minimum_Matched__c &gt; rC_Giving__Maximum_Matched__c)</errorConditionFormula>
        <errorDisplayField>rC_Giving__Maximum_Matched__c</errorDisplayField>
        <errorMessage>Maximum Matched Amount must be greater than Minimum Matched Amount</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rC_Giving__Minimum_Matched_Amount_Value_Present</fullName>
        <active>true</active>
        <description>&quot;Minimum Matched&quot; is required when &quot;Maximum Matched&quot; is populated.</description>
        <errorConditionFormula>AND($Setup.rC_Giving__Account_Validation__c.rC_Giving__Minimum_Matched_Amount_Value_Present__c, NOT(ISBLANK(rC_Giving__Maximum_Matched__c)), ISBLANK(rC_Giving__Minimum_Matched__c))</errorConditionFormula>
        <errorDisplayField>rC_Giving__Minimum_Matched__c</errorDisplayField>
        <errorMessage>Required field (because Maximum Matched is not blank): Minimum Matched</errorMessage>
    </validationRules>
</CustomObject>